input-selector: return FALSE for "active" property if selector is NULL

https://bugzilla.gnome.org/show_bug.cgi?id=701323